# castle_script_demo

./: .gitignore
FNV-1a-64bit/: FNV-1a-64bit  Makefile  README.md
FNV-1a-64bit/.devcontainer/: devcontainer.json
FNV-1a-64bit/src/: main.cpp
KSA-ASX-64_8bit/: KSA-ASX-64_8bit  Makefile
KSA-ASX-64_8bit/src/: main.cpp
adapt_files_gen/: Makefile  adapt_files_gen
adapt_files_gen/src/: main.cpp
copy_libs_for_bt/: Makefile  hello_world
copy_libs_for_bt/src/: main.cpp
copy_libs_for_bt_cmake/: CMakeLists.txt
cpp-hello-world/: Makefile
cpp-hello-world/src/: main.cpp
makefile_gen/: Makefile  makefile_gen
makefile_gen/src/: IniParser.cpp  IniParser.h  main.cpp
rename_movie/src/: main.cpp
